--- a/index.html
+++ b/index.html
@@ -85,8 +85,7 @@
                 <div class="uk-grid-match uk-child-width-1-1@m" uk-grid>
                     <div>
                         <p>
-                            Un exemple est plus parlant qu'une longue explications: voici donc quelques-unes de mes réalisations. Les languages que j'utilises
-                            sont: Html5 et css3, Javascript, PHP.
+                            Un exemple est plus parlant qu'une longue explications: voici donc quelques-unes de mes réalisations.
                         </p>
                     </div>
                 </div>
