--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
                                 <li>
                                     <a href="exercices/exo js/jQuery/exo1/accueil.html" target="_blank">Du Jquery</a>
                                 </li>
+                                <li>
+                                    <a href="exercices/exo js/Ajax/fetch/index.html" target="_blank">Fetch et GoT</a>
+                                </li>
                             </ul>
                         </div>
                     </li>
